fix CE-67 bug #10 - spacings on the sides of the page

--- a/src/components/AdminLayout/AdminHeader.scss
+++ b/src/components/AdminLayout/AdminHeader.scss
@@ -1,7 +1,7 @@
 .admin-header {
   .top-menu {
-    padding-left: 40px;
-    padding-right: 20px;
+    padding-left: 9.4%;
+    padding-right: 5.99%;
     background-color: #3b4557 !important;
     height: 64px;
   }
