--- a/src/components/PageHeader/index.scss
+++ b/src/components/PageHeader/index.scss
@@ -9,6 +9,8 @@
   }
 
   .ui.breadcrumb {
+    padding-left: 4%;
+
     @media screen and (max-width: 767px) {
       font-size: 0.8rem !important;
     }
